Concluida a resposta em JSON da API relacionada com a pesquisa no search. Denstro do código tem uma funcao para ser contextualizada, a de Listar Pokemons. Falta mostrar os dados dentro do Card.

--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://pokeapi.co"
+
+  "emmet.syntaxProfiles": {
+    "javascript": "jsx"
+  },
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+
+ "proxy": "https://pokeapi.co"
 }
